[gd_scene load_steps=4 format=3 uid="uid://ul55itelj7m"]

[ext_resource type="Script" uid="uid://b76gqtf38pmo0" path="res://scripts/typewritter_thing.gd" id="1_1npgn"]
[ext_resource type="Texture2D" uid="uid://bsixuhq3vhawr" path="res://art/Typewritter-Sheet.png" id="2_toq03"]
[ext_resource type="FontFile" uid="uid://blaxo84co62o2" path="res://fonts/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="3_yv1kg"]

[node name="typewritter thing" type="Node2D"]
script = ExtResource("1_1npgn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("2_toq03")
hframes = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(43, 10, 53, -1, 61, 7, 62, 16, 62, 21, 48, 28, 43, 25, 43, 11)

[node name="Label" type="Label" parent="."]
offset_left = -67.0
offset_top = 18.0
offset_right = -54.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yv1kg")
theme_override_font_sizes/font_size = 18

[node name="Label2" type="Label" parent="."]
offset_left = -46.0
offset_top = 18.0
offset_right = -34.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yv1kg")
theme_override_font_sizes/font_size = 18

[node name="Label3" type="Label" parent="."]
offset_left = -26.0
offset_top = 18.0
offset_right = -12.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yv1kg")
theme_override_font_sizes/font_size = 18

[node name="Label4" type="Label" parent="."]
offset_left = -3.0
offset_top = 18.0
offset_right = 9.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yv1kg")
theme_override_font_sizes/font_size = 18

[node name="Label5" type="Label" parent="."]
offset_left = 19.0
offset_top = 18.0
offset_right = 33.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yv1kg")
theme_override_font_sizes/font_size = 18

[node name="Submit Button" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Submit Button"]
polygon = PackedVector2Array(-61, -10, -48, -10, -48, 2, -49, 2, -49, 3, -65, 3, -65, -6, -64, -6, -64, -7, -63, -7, -63, -8, -62, -8, -62, -9, -61, -9)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Submit Button" to="." method="_on_submit_button_area_entered"]
[connection signal="area_exited" from="Submit Button" to="." method="_on_submit_button_area_exited"]
